Initial commit that removes @Context and @Suspended. All examples have been updated.